--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Navigation Drawer</string>
     <string name="open">Open Navigation Drawer</string>
     <string name="close">Close Navigation Drawer</string>
+    <string name="web_client_id">877672521682-vnkddu5tna4l42vae0d1omgia9q00n9m.apps.googleusercontent.com</string>
 </resources>
